--- a/Views/Home/Manufacturer/UploadMaterialImages.cshtml
+++ b/Views/Home/Manufacturer/UploadMaterialImages.cshtml
@@ -62,6 +62,9 @@
 
                 @{
                     var materials = ViewBag.Materials as SelectList ?? new SelectList(new List<SelectListItem>());
+                    var materialImages = ViewBag.MaterialImages as List<MaterialImage> ?? new List<MaterialImage>();
+                    // Create a dictionary for quick lookup of materials that already have images
+                    var materialsWithImages = materialImages.Select(mi => mi.MaterialMasterId).ToHashSet();
                 }
                 
                 @if (materials.Any())
@@ -77,15 +80,22 @@
                             <div class="border border-gray-300 rounded-md p-3 max-h-60 overflow-y-auto" id="materialsContainer">
                                 @foreach (var item in materials)
                                 {
+                                    var materialId = int.Parse(item.Value);
+                                    var hasImage = materialsWithImages.Contains(materialId);
                                     <div class="flex items-center mb-2 material-item" data-name="@item.Text.ToLower()">
-                                        <input type="checkbox" id="material_@item.Value" name="MaterialMasterIds" value="@item.Value" class="h-4 w-4 text-indigo-600 border-gray-300 rounded">
+                                        <input type="checkbox" id="material_@item.Value" name="MaterialMasterIds" value="@item.Value" class="h-4 w-4 text-indigo-600 border-gray-300 rounded" @(hasImage ? "disabled" : "")>
                                         <label for="material_@item.Value" class="ml-2 block text-xs text-gray-700">
                                             @item.Text
+                                            @if (hasImage)
+                                            {
+                                                <span class="text-orange-500">(Has image)</span>
+                                            }
                                         </label>
                                     </div>
                                 }
                             </div>
                             <span asp-validation-for="MaterialMasterIds" class="text-red-500 text-xs"></span>
+                            <p class="text-xs text-gray-500 mt-1">Note: Materials that already have images are disabled. Delete existing images first to upload new ones.</p>
                         </div>
                         
                         <div>
@@ -128,8 +138,8 @@
                         <svg class="mx-auto h-8 w-8 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
                         </svg>
-                        <h3 class="mt-1 text-xs font-medium text-gray-900">All materials have images</h3>
-                        <p class="mt-1 text-xs text-gray-500">No materials available for image upload. Delete existing images to upload new ones.</p>
+                        <h3 class="mt-1 text-xs font-medium text-gray-900">No active materials found</h3>
+                        <p class="mt-1 text-xs text-gray-500">There are no active materials available for image upload.</p>
                     </div>
                 }
             </div>
@@ -142,7 +152,8 @@
             </div>
             <div class="p-4 max-h-96 overflow-y-auto">
                 @{
-                    var materialImages = ViewBag.MaterialImages as List<MaterialImage> ?? new List<MaterialImage>();
+                    // Re-fetch materialImages to ensure we have the latest data
+                    materialImages = ViewBag.MaterialImages as List<MaterialImage> ?? new List<MaterialImage>();
                 }
                 
                 @if (materialImages.Any())
